plugins {
    id 'java'
    id 'scala'
    id 'application'
}

group = 'tvr.bigdata'
version = '0.0.1-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}
application {
    mainClass = 'tvr.learn.dataeng.spark.BasicSparkExample'
    applicationDefaultJvmArgs = [
            "--add-opens=java.base/sun.nio.ch=ALL-UNNAMED",
            "--add-opens=java.base/java.nio=ALL-UNNAMED"
    ]
}

repositories {
    mavenCentral()
}


dependencies {
    implementation('org.apache.spark:spark-core_2.12:3.3.0') {
//        exclude group: 'org.glassfish.jersey.core', module: 'jersey-server'
//        exclude group: 'org.glassfish.jersey.containers', module: 'jersey-container-servlet'
    }
    implementation 'org.apache.spark:spark-sql_2.12:3.3.0'
    implementation 'org.apache.hadoop:hadoop-common:3.3.6'
    implementation 'org.apache.hadoop:hadoop-aws:3.4.0'
//    implementation 'org.apache.hive:hive-exec:3.1.3'
    implementation 'com.amazonaws:aws-java-sdk-bundle:1.12.761'
    implementation 'org.apache.parquet:parquet-hadoop:1.12.3'
    implementation 'org.apache.parquet:parquet-common:1.12.3'

    implementation 'org.apache.spark:spark-hive_2.12:3.2.1'

    // SLF4J API
    implementation 'org.slf4j:slf4j-api:1.7.32'

    // Log4j implementation
    implementation 'org.apache.logging.log4j:log4j-api:2.17.1'
    implementation 'org.apache.logging.log4j:log4j-core:2.17.1'

    // Ensure no other logging implementation is included
    configurations.all {
        exclude group: 'org.slf4j', module: 'slf4j-log4j12'
        exclude group: 'org.slf4j', module: 'log4j-over-slf4j'
    }

}


tasks.named('test') {
    useJUnitPlatform()
}
